// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toast API 1`] = `
.c3 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

.c1 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
}

.dUUMVe > *:nth-child(2) .c2 {
  margin-top: 5px;
}

.pYtWd > .c2 {
  margin-top: 5px;
}

.sQyKx > .c2 {
  margin-top: 5px;
}

.c0 {
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

<div
  className="c0 c1"
  kind="primary"
>
  <p
    className="c2 c3"
    kind="primary"
  >
    Success! You have delete the item.
  </p>
</div>
`;

exports[`Storyshots Toast With kind props 1`] = `
.c6 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

.c4 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #999A94;
  background-color: rgba(250,250,250,0.1);
}

.c8 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #69BE28;
  background-color: rgba(105,190,40,0.1);
}

.c10 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F5364E;
  background-color: rgba(245,54,78,0.1);
}

.c12 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F39A1E;
  background-color: rgba(243,154,30,0.1);
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
}

.dUUMVe > *:nth-child(2) .c3 {
  margin-top: 5px;
}

.pYtWd > .c3 {
  margin-top: 5px;
}

.sQyKx > .c3 {
  margin-top: 5px;
}

.c5 {
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

.c1 {
  border: 1px solid #999A94;
  background-color: rgba(255,255,255,0.9);
}

.c7 {
  border: 1px solid #69BE28;
  background-color: rgba(255,255,255,0.9);
}

.c9 {
  border: 1px solid #F5364E;
  background-color: rgba(255,255,255,0.9);
}

.c11 {
  border: 1px solid #F39A1E;
  background-color: rgba(255,255,255,0.9);
}

.c0 > * {
  margin-bottom: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    kind="default"
  >
    <div
      className="c3 c4"
      kind="default"
    >
      default
       - You have delete the item.
    </div>
  </div>
  <div
    className="c5 c2"
    kind="primary"
  >
    <div
      className="c3 c6"
      kind="primary"
    >
      primary
       - You have delete the item.
    </div>
  </div>
  <div
    className="c7 c2"
    kind="success"
  >
    <div
      className="c3 c8"
      kind="success"
    >
      success
       - You have delete the item.
    </div>
  </div>
  <div
    className="c9 c2"
    kind="error"
  >
    <div
      className="c3 c10"
      kind="error"
    >
      error
       - You have delete the item.
    </div>
  </div>
  <div
    className="c11 c2"
    kind="warning"
  >
    <div
      className="c3 c12"
      kind="warning"
    >
      warning
       - You have delete the item.
    </div>
  </div>
</div>
`;
